fix: 파일 경로 수정 및 커널 이름 변경 - baseline.ipynb에서 PDF 파일 경로를 상대 경로로 수정 - 커널 이름을 '.venv'로 변경

--- a/code/baseline.ipynb
+++ b/code/baseline.ipynb
@@ -75,7 +75,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "loader = PyMuPDFLoader(\"data/SPRI_AI_Brief_2023년12월호_F.pdf\")\n",
+    "loader = PyMuPDFLoader(\"../data/SPRI_AI_Brief_2023년12월호_F.pdf\")\n",
     "docs = loader.load()\n",
     "\n",
     "print(f\"로드된 문서 수: {len(docs)}\")\n",
@@ -283,7 +283,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
