WIP: local changes before merging upstream

--- a/code/baseline/baseline.ipynb
+++ b/code/baseline/baseline.ipynb
@@ -283,7 +283,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "upstageailab-langchain-pjt-langchain-5",
    "language": "python",
    "name": "python3"
   },
